@@ -26,6 +26,7 @@
 #define AWN_FORCE_MONITOR	"/apps/avant-window-navigator/force_monitor"
 #define AWN_MONITOR_WIDTH	"/apps/avant-window-navigator/monitor_width"
 #define AWN_MONITOR_HEIGHT	"/apps/avant-window-navigator/monitor_height"
+#define AWN_PANEL_MODE		"/apps/avant-window-navigator/panel_mode"
 
 #define BAR_PATH		"/apps/avant-window-navigator/bar"
 #define BAR_ROUNDED_CORNERS	"/apps/avant-window-navigator/bar/rounded_corners"	/* bool */
@@ -99,6 +100,7 @@ awn_gconf_new()
 	awn_load_bool(client, AWN_FORCE_MONITOR, &s->force_monitor, FALSE);
 	awn_load_int(client, AWN_MONITOR_WIDTH, &s->monitor_width, 1024);
 	awn_load_int(client, AWN_MONITOR_HEIGHT, &s->monitor_height, 768);
+	awn_load_bool(client, AWN_PANEL_MODE, &s->panel_mode, FALSE);
 	
 	/* Bar settings */
 	gconf_client_add_dir(client, BAR_PATH, GCONF_CLIENT_PRELOAD_NONE, NULL);
