@@ -1,5 +1,13 @@
 2007-02-16  Neil Jagdish Patel  <njp@Fedora>
 
+	Optionally can behave like a panel (windows cannot maximise over/under the bar).
+
+	* src/awn-gconf.c: (awn_gconf_new):
+	* src/awn-gconf.h:
+	* src/awn-window.c: (_position_window):
+
+2007-02-16  Neil Jagdish Patel  <njp@Fedora>
+
 	Merged "keep_above" patch by Vickor Gal. Title should stay above other windows now.
 
 	* README:
